log
Tue 12 Sep 2023 09:18:01 PM UTC: 
 tests:  1|8
total_score: 0/70
46182ad
Tue 12 Sep 2023 09:26:02 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:3: error: ‘new’ undeclared (first use in this function)
   44 |   new->lower_than = lower_than;
      |   ^~~
treemap.c:44:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d275561
Tue 12 Sep 2023 09:26:13 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
a58e203
Tue 12 Sep 2023 09:33:07 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:3: error: implicit declaration of function ‘insetTreeNode’ [-Werror=implicit-function-declaration]
   54 |   insetTreeNode(&(tree->root),tree->lower_than,key,value);
      |   ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6f02f4f
Tue 12 Sep 2023 09:33:14 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:3: error: implicit declaration of function ‘insertTreeNode’; did you mean ‘insertTreeMap’? [-Werror=implicit-function-declaration]
   54 |   insertTreeNode(&(tree->root),tree->lower_than,key,value);
      |   ^~~~~~~~~~~~~~
      |   insertTreeMap
cc1: all warnings being treated as errors
Compilation failed
e6cfe11
Tue 12 Sep 2023 09:36:07 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:19: error: ‘map’ undeclared (first use in this function)
   54 |   int resultado = map->lower_than(key1,key2);
      |                   ^~~
treemap.c:54:19: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:54:35: error: ‘key1’ undeclared (first use in this function); did you mean ‘key’?
   54 |   int resultado = map->lower_than(key1,key2);
      |                                   ^~~~
      |                                   key
treemap.c:54:40: error: ‘key2’ undeclared (first use in this function); did you mean ‘key’?
   54 |   int resultado = map->lower_than(key1,key2);
      |                                        ^~~~
      |                                        key
treemap.c:55:3: error: implicit declaration of function ‘insertTreeNode’; did you mean ‘insertTreeMap’? [-Werror=implicit-function-declaration]
   55 |   insertTreeNode(&(tree->root),tree->resultado,key,value);
      |   ^~~~~~~~~~~~~~
      |   insertTreeMap
treemap.c:55:36: error: ‘TreeMap’ has no member named ‘resultado’
   55 |   insertTreeNode(&(tree->root),tree->resultado,key,value);
      |                                    ^~
treemap.c:54:7: error: unused variable ‘resultado’ [-Werror=unused-variable]
   54 |   int resultado = map->lower_than(key1,key2);
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5d71d5e
Tue 12 Sep 2023 09:36:26 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:36: error: ‘key1’ undeclared (first use in this function); did you mean ‘key’?
   54 |   int resultado = tree->lower_than(key1,key2);
      |                                    ^~~~
      |                                    key
treemap.c:54:36: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:54:41: error: ‘key2’ undeclared (first use in this function); did you mean ‘key’?
   54 |   int resultado = tree->lower_than(key1,key2);
      |                                         ^~~~
      |                                         key
treemap.c:55:3: error: implicit declaration of function ‘insertTreeNode’; did you mean ‘insertTreeMap’? [-Werror=implicit-function-declaration]
   55 |   insertTreeNode(&(tree->root),tree->resultado,key,value);
      |   ^~~~~~~~~~~~~~
      |   insertTreeMap
treemap.c:55:36: error: ‘TreeMap’ has no member named ‘resultado’
   55 |   insertTreeNode(&(tree->root),tree->resultado,key,value);
      |                                    ^~
treemap.c:54:7: error: unused variable ‘resultado’ [-Werror=unused-variable]
   54 |   int resultado = tree->lower_than(key1,key2);
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
64fddc0
Tue 12 Sep 2023 09:36:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:55:3: error: implicit declaration of function ‘insertTreeNode’; did you mean ‘insertTreeMap’? [-Werror=implicit-function-declaration]
   55 |   insertTreeNode(&(tree->root),tree->resultado,key,value);
      |   ^~~~~~~~~~~~~~
      |   insertTreeMap
treemap.c:55:36: error: ‘TreeMap’ has no member named ‘resultado’
   55 |   insertTreeNode(&(tree->root),tree->resultado,key,value);
      |                                    ^~
treemap.c:54:7: error: unused variable ‘resultado’ [-Werror=unused-variable]
   54 |   int resultado = tree->lower_than(key,value);
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
90c76cf
